--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,3 +1,16 @@
 {
-  "singleQuote": true
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "none",
+    "arrowParens": "avoid",
+    "printWidth": 80,
+    "tabWidth": 2,
+    "overrides": [
+        {
+            "files": "*.json",
+            "options": {
+                "tabWidth": 4
+            }
+        }
+    ]
 }
